--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* NORMALIZE.CSS */
+/* NORMALIZE.CSS {{{ */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -349,3 +349,7 @@ template {
 [hidden] {
   display: none;
 }
+
+/* }}} */
+
+
