in progress commit, added background and fonts

--- a/styles.css
+++ b/styles.css
@@ -352,4 +352,9 @@ template {
 
 /* }}} */
 
-
+body {
+	background-color: hsl(185, 75%, 39%);
+	background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
+	background-position: 0% 50%, 60% 60%;
+	background-repeat: no-repeat;
+}
