--- a/styles.css
+++ b/styles.css
@@ -360,3 +360,37 @@ body {
 	background-repeat: no-repeat;
 	*/
 }
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+* {
+	box-sizing: border-box;	
+ }
+
+ main {
+	 display: flex;
+	 height: 98%;
+	 width: 98%;
+	 justify-content: center;
+	 align-items: center;
+ }
+
+ .card {
+	 display: flex;
+	 max-width: 350px;
+	 max-height: 375px;
+	 height: 95%;
+	 width: 95%;
+	 border: 1px solid black;
+	 border-radius: 5%;
+	 justify-content: center;
+	 align-items: center;
+	 background-color: white;
+	 background-image: url(./images/bg-pattern-card.svg);
+	 background-repeat: no-repeat;
+	 background-size: contain;
+ }
+
