--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,7 @@ body {
 html, body {
     margin: 0;
     height: 100%;
+		line-height:1.0;
 }
 
 * {
@@ -380,17 +381,73 @@ html, body {
 
  .card {
 	 display: flex;
-	 max-width: 350px;
-	 max-height: 375px;
+
+	 max-width: 400px;
+	 max-height: 450px;
 	 height: 95%;
 	 width: 95%;
-	 border: 1px solid black;
+	 min-height: 300px;
+	 min-height: 325px;
+
 	 border-radius: 5%;
+
 	 justify-content: center;
 	 align-items: center;
+
 	 background-color: white;
+
 	 background-image: url(./images/bg-pattern-card.svg);
 	 background-repeat: no-repeat;
 	 background-size: contain;
+
+	font-family: Kumbh Sans, Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	color: hsl(0, 0%, 59%);
+	position: relative;
  }
 
+ .info {
+	 font-size: 18px;
+	 white-space: pre;
+ }
+
+ .info > p:last-child {
+	 font-size: 14px;
+ }
+
+ .bold {
+	 font-weight: 700;
+	 font-size: 18px;
+	 color: hsl(229, 23%, 23%);
+ }
+
+ .profile-picture {
+	 border-radius: 100%;
+	 object-fit: contain;
+ }
+
+ .circle {
+	 position: absolute;
+	 top: 25%;
+ }
+
+ .info {
+	 display: flex;
+	 flex-direction: column;
+	 flex-wrap: wrap;
+	 text-align: center;
+	 line-height: .1;
+	 align-items: center;
+	 justify-content:center;
+	 position: absolute;
+	 width: 100%;
+	 top: 50%;
+ } 
+
+ .stats {
+	 display: grid;
+	 width: 100%;
+	 grid-template-columns: repeat(3, 1fr);
+	 position: absolute;
+	 top: 70%;
+ }
