--- a/styles.css
+++ b/styles.css
@@ -357,7 +357,8 @@ template {
 body {
 	background-color: hsl(185, 75%, 39%);
 	background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
-	background-position:  top 0px left 0px, bottom -50px right -50px;
+	background-position: -350px -500px, 700px 350px ;
+	background-position: top -150% left -10%, bottom -150% right -5%; 
 	background-repeat: no-repeat;
 }
 
@@ -468,3 +469,5 @@ html, body {
 	 margin: 0 auto;
 	 letter-spacing: 2px;
  }
+
+
