--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ html, body {
 	 max-height: 450px;
 	 height: 95%;
 	 width: 95%;
-	 min-height: 300px;
+	 min-width: 300px;
 	 min-height: 325px;
 
 	 border-radius: 5%;
